[ADD]체굴내역 검색 필터 추가
